create github pages

--- a/index.html
+++ b/index.html
@@ -47,16 +47,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-speed mbr-iconfont mbr-iconfont-btn"></span>
-                        ZOLA SOLAR PRODUCTS</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>CUSTOMER SUPPORT</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>ENGLISH</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>SWAHILI</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>ENGLISH</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>SWAHILI</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="header4 cid-qXvRGBkKZt" id="header4-b">
+<section class="engine"><a href="https://mobiri.se/q">responsive site templates</a></section><section class="header4 cid-qXvRGBkKZt" id="header4-b">
 
     
 
@@ -248,7 +245,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CYK9zqHrP/QTyaxZC0DM/I8QWsA52n/heoBLN1DvNDs5pec1CXmmsLTBZ51NGpQNXnkJT+aBWabdv8Kw8ctolT74eybbnqXeaIddkGZMkrNSe7hhS7zX7v/Qnx2TAyhg" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xP4uiHRqh6/W7dm0wd4M2CDvrlZkDXAr67RVDDjeX3W4bCNO3exGDNIsrhiQ2wo3xHLA/mviJkiE+INe5tgTpr+vpNynukC1tQ1XrlL1v8MyETU/FoUL6X4QfI55NLaJ" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-f">
