create github pages

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/q">responsive site templates</a></section><section class="header4 cid-qXvRGBkKZt" id="header4-b">
+<section class="engine"><a href="https://mobiri.se/w">html5 templates</a></section><section class="header4 cid-qXvRGBkKZt" id="header4-b">
 
     
 
@@ -245,7 +245,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xP4uiHRqh6/W7dm0wd4M2CDvrlZkDXAr67RVDDjeX3W4bCNO3exGDNIsrhiQ2wo3xHLA/mviJkiE+INe5tgTpr+vpNynukC1tQ1XrlL1v8MyETU/FoUL6X4QfI55NLaJ" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Bqka3fcfq/W4fsrR9HblnpdmRTQLtsi+twGapv4EVfLe2IhevRUa/NoIGFplbGKHkfRlUOX9dxDOcqq/rc3LDhOEQO48Odz+SzlLXacqwrxfgMasfoYd3QYm+muesMuE" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-f">
