create github pages

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/x">css templates</a></section><section class="header4 cid-qXvRGBkKZt" id="header4-b">
+<section class="engine"><a href="https://mobiri.se/t">free amp templates</a></section><section class="header4 cid-qXvRGBkKZt" id="header4-b">
 
     
 
@@ -245,7 +245,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7Sa/Vcl32G2WjRnahEtrA7FaGRM9TlFuinXNUnWLZLONdEHTCcKsHKCA0zNWDDwTj9UbpsjUEwyt2eZwR9gX0EPVQz5OkQAdejrtBfuNfR43o6E+DXIjDkNZssWpqdLZ" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3kQQ/5nasiAo+pHsudOMm5vhxzj9nMt3u5TN/RpZz/HnQBK+LklFQT8DGqWFEb3gMNLaiWK3HPydE33tUAfnE46PF+TBKWm+KWRzg2XTOj5GB/Lj2/MZFxcCuvphMPXo" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-f">
@@ -301,7 +301,7 @@
                                 <h3 class="count py-3 mbr-fonts-style display-5">Working @ ZOLA</h3>
                             </div>
                             <div class="card-text">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"></h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">More information about working @ZOLA</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"></p>
                             </div>
                         </div>
@@ -313,7 +313,7 @@
                                 <h3 class="count py-3 mbr-fonts-style display-5">Employee Testimonials</h3>
                             </div>
                             <div class="card-text">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"></h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Profie of 3-4 current employees with short paragraph about the benefits of working @ZOLA</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"></p>
                             </div>
                         </div>
