--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">free amp templates</a></section><section class="header4 cid-qXvRGBkKZt" id="header4-b">
+<section class="engine"><a href="https://mobiri.se/w">free html5 templates</a></section><section class="header4 cid-qXvRGBkKZt" id="header4-b">
 
     
 
@@ -69,7 +69,7 @@
                     <p class="mbr-text mbr-fonts-style display-5">
                         The future is bright with ZOLA</p>
                 </div>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://mobirise.com"><span class="mbri-speed mbr-iconfont mbr-iconfont-btn"></span>ZOLA PRODUCTS</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="page1.html"><span class="mbri-speed mbr-iconfont mbr-iconfont-btn"></span>ZOLA PRODUCTS</a>
                     <a class="btn btn-md btn-primary display-4" href="https://mobirise.com"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>CUSTOMER SUPPORT</a></div>
             </div>
             <div class="mbr-figure pt-5">
@@ -245,7 +245,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3kQQ/5nasiAo+pHsudOMm5vhxzj9nMt3u5TN/RpZz/HnQBK+LklFQT8DGqWFEb3gMNLaiWK3HPydE33tUAfnE46PF+TBKWm+KWRzg2XTOj5GB/Lj2/MZFxcCuvphMPXo" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GKL/FkUjJ1ZcWNCwCguav5wM99oCo1Df3RSYDLigb1VKQGl8aJPDvMcyp4wd72Bu52j8/fvwsIiFPP3zq5MadjCdtXriScZIzwp9SG13RDQCpr1/BuT3ZOb4ZYENdVyZ" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-f">
